fix: decrease margin sign up to remove overflow vertical

--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -7,7 +7,7 @@
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
 
-  margin: 5rem auto;
+  margin: 3rem auto;
   background-color: white;
 }
 
